[package]
name = "field_accessor_pub"
version = "0.5.2"
edition = "2021"
authors = ["Tomohiro Endo <europeanplaice@gmail.com>", "cstef"]
description = "A procedural macro to get and set a struct field by String dynamically. This crate is a quick and dirty fork of field_accessor_pub."
repository = "https://github.com/europeanplaice/field_accessor_pub"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["data-structures"]
keywords = ["getattr", "setattr", "getter", "setter", "proc-macro"]
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
